# FreeEta

./: Cargo.toml  README.md  config.yml
src/: freeeta_styles.rs  freeeta_yml.rs  main.rs  main_menu.rs
